Add deployment success banner - testing CI/CD

--- a/project-1-personal-website/index.html
+++ b/project-1-personal-website/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div style="background: #4CAF50; color: white; padding: 1rem; text-align: center; border-radius: 5px; margin: 1rem 0;">
+  🚀 Successfully Deployed via CI/CD Pipeline!
+</div>
+
     <div class="container">
         <header>
             <h1>Welcome to My DevOps Journey</h1>
